--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,7 @@ body header .dropdownContainer .dropdown:hover {
   background-color: rgba(204, 204, 204, 0.5);
 }
 body .dropdownMenu {
-  display: none;
+  visibility: hidden;
   z-index: 1;
   list-style: none;
   position: absolute;
