--- a/styles/style.scss
+++ b/styles/style.scss
@@ -310,7 +310,7 @@ footer {
 
 @media(max-width : 880px) {
 
-    .dropdownMenu {
+    .enlace {
         background-color: rgb(177, 173, 160, 1);
     }
 }
