--- a/styles/style.css
+++ b/styles/style.css
@@ -332,7 +332,7 @@ footer .contacto .email {
 }
 
 @media (max-width: 880px) {
-  .dropdownMenu {
+  .enlace {
     background-color: #b1ada0;
   }
 }
