--- a/styles/style.css
+++ b/styles/style.css
@@ -42,7 +42,7 @@ body header .dropdownContainer .dropdown:hover {
 }
 body .dropdownMenu {
   visibility: hidden;
-  z-index: 1;
+  z-index: 7;
   list-style: none;
   position: absolute;
   right: 0;
@@ -114,6 +114,7 @@ body .presentacion {
   font-size: 3em;
   color: #1C1B18;
   padding-bottom: 0.2em;
+  z-index: 1;
 }
 .sobreMi > h1::after {
   content: "";
@@ -190,6 +191,7 @@ body .presentacion {
 .tecnologias .frontend .imagenTecnologia span {
   visibility: hidden;
   font-family: "Titillium Web", sans-serif;
+  font-weight: 600;
 }
 .tecnologias .frontend .imagenTecnologia:hover span {
   visibility: visible;
@@ -223,6 +225,7 @@ body .presentacion {
 .tecnologias .backend .imagenTecnologia span {
   visibility: hidden;
   font-family: "Titillium Web", sans-serif;
+  font-weight: 600;
 }
 .tecnologias .backend .imagenTecnologia:hover span {
   visibility: visible;
@@ -256,6 +259,7 @@ body .presentacion {
 .tecnologias .otros .imagenTecnologia span {
   visibility: hidden;
   font-family: "Titillium Web", sans-serif;
+  font-weight: 600;
 }
 .tecnologias .otros .imagenTecnologia:hover span {
   visibility: visible;
