--- a/styles/style.css
+++ b/styles/style.css
@@ -42,8 +42,6 @@ body header .dropdownContainer .dropdown:hover {
 }
 body .dropdownMenu {
   visibility: hidden;
-  z-index: 7;
-  list-style: none;
   position: absolute;
   right: 0;
   top: 0;
@@ -51,30 +49,21 @@ body .dropdownMenu {
   flex-direction: column;
   align-items: flex-start;
   width: 15em;
-  background-color: rgba(177, 173, 160, 0.87);
+  font-size: 0.8em;
 }
-body .dropdownMenu li {
-  padding-bottom: 1em;
-  padding-top: 0.5em;
+body .dropdownMenu #dropMenuComponent {
+  background-color: rgba(177, 173, 160, 0.87);
+  border-bottom: 1px solid #1C1B18;
   width: 100%;
 }
-body .dropdownMenu li:hover {
+body .dropdownMenu #dropMenuComponent:hover {
   background-color: rgba(144, 141, 131, 0.87);
   cursor: pointer;
 }
-body .dropdownMenu li:not(.cerrarContainer) {
-  padding-left: 1em;
-}
-body .dropdownMenu li {
-  border-bottom: #1C1B18 solid 1px;
-}
-body .dropdownMenu .cerrarContainer :hover {
-  cursor: pointer;
-}
 body .dropdownMenu a {
-  width: 5em;
+  padding: 0.5em 0 1.5em 1em;
   height: 100%;
-  font: "Titillium Web", sans-serif;
+  font-family: "Titillium Web", sans-serif;
   text-decoration: none;
   font-size: 1.2em;
   color: #1C1B18;
@@ -82,11 +71,12 @@ body .dropdownMenu a {
 body .dropdownMenu .cerrarContainer {
   display: flex;
   justify-content: center;
+  width: 100%;
+  padding: 1em 0 0.5em 0;
 }
 body .dropdownMenu .cerrarContainer .cerrar {
   height: 15px;
   width: 20px;
-  align-self: center;
 }
 body .presentacion {
   display: flex;
@@ -336,7 +326,7 @@ footer .contacto .email {
 }
 
 @media (max-width: 880px) {
-  .enlace {
+  #dropMennuComponent {
     background-color: #b1ada0;
   }
 }
