--- a/styles/style.scss
+++ b/styles/style.scss
@@ -140,8 +140,6 @@ body {
 
     .dropdownMenu {
         visibility: hidden;
-        z-index: 7;
-        list-style: none;
         position: absolute;
         right: 0;
         top: 0;
@@ -149,11 +147,11 @@ body {
         flex-direction: column;
         align-items: flex-start;
         width: 15em;
-        background-color: rgba(177, 173, 160, 0.87);
+        font-size: 0.8em;
 
-        & li {
-            padding-bottom: 1em;
-            padding-top: 0.5em;
+        & #dropMenuComponent {
+            background-color: rgba(177, 173, 160, 0.87);
+            border-bottom: 1px solid $fontColor;
             width: 100%;
 
             &:hover {
@@ -162,37 +160,30 @@ body {
             }
         }
 
-        & li:not(.cerrarContainer) {
-            padding-left: 1em;
-        }
-
-        & li {
-            border-bottom: $fontColor solid 1px;
-        }
-
-        & .cerrarContainer :hover {
-            cursor: pointer;
-        }
-
         & a {
-            width: 5em;
+            padding: 0.5em 0 1.5em 1em;
             height: 100%;
-            font: $font;
+            font-family: "Titillium Web", sans-serif;
             text-decoration: none;
             font-size: 1.2em;
             color: $fontColor;
+
+
         }
 
         .cerrarContainer {
             display: flex;
             justify-content: center;
+            width: 100%;
+            padding: 1em 0 0.5em 0;
 
             & .cerrar {
                 height: 15px;
                 width: 20px;
-                align-self: center;
             }
         }
+
+
 
     }
 
@@ -313,7 +304,7 @@ footer {
 
 @media(max-width : 880px) {
 
-    .enlace {
+    #dropMennuComponent {
         background-color: rgb(177, 173, 160, 1);
     }
 }
