--- a/styles/style.css
+++ b/styles/style.css
@@ -50,6 +50,8 @@ body .dropdownMenu {
   align-items: flex-start;
   width: 15em;
   font-size: 0.8em;
+  animation-duration: 2s;
+  animation-name: drop;
 }
 body .dropdownMenu #dropMenuComponent {
   background-color: rgba(177, 173, 160, 0.87);
@@ -77,6 +79,16 @@ body .dropdownMenu .cerrarContainer {
 body .dropdownMenu .cerrarContainer .cerrar {
   height: 15px;
   width: 20px;
+}
+@keyframes drop {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
 }
 body .presentacion {
   display: flex;
@@ -315,14 +327,15 @@ footer h2 {
 footer .contacto {
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
-footer .contacto img:not(.email) {
+footer .contacto img {
   width: 80px;
   height: 80px;
 }
-footer .contacto .email {
-  width: 73px;
-  height: 73px;
+footer .contacto span {
+  font-family: "Titillium Web", sans-serif;
+  font-size: 1.2em;
 }
 
 @media (max-width: 880px) {
