--- a/styles/style.scss
+++ b/styles/style.scss
@@ -127,6 +127,9 @@ body {
                     background-color: $fontColorPresentacion;
                     border-radius: 2px;
                 }
+                .black{
+                    background-color: #1C1B18;
+                }
 
 
                 &:hover {
