--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,6 @@ body header {
   width: 100%;
   height: 70px;
   position: fixed;
-  background-color: rgba(134, 184, 177, 0.2);
 }
 body header .dropdownContainer {
   height: 4.5em;
@@ -342,8 +341,8 @@ footer .contacto span {
 }
 
 @media (max-width: 880px) {
-  #dropMennuComponent {
-    background-color: #b1ada0;
+  .dropdownMenu {
+    background-color: #f9fadc;
   }
 }
 @media (max-width: 600px) {
