--- a/styles/style.scss
+++ b/styles/style.scss
@@ -106,7 +106,6 @@ body {
         width: 100%;
         height: 70px;
         position: fixed;
-        background-color: rgba(134, 184, 177, 0.2);
 
         & .dropdownContainer {
             height: 4.5em;
@@ -128,7 +127,7 @@ body {
                     border-radius: 2px;
                 }
                 .black{
-                    background-color: #1C1B18;
+                    background-color: $fontColor;
                 }
 
 
@@ -153,6 +152,8 @@ body {
         font-size: 0.8em;
         animation-duration: 2s;
         animation-name: drop;
+
+       
 
         & #dropMenuComponent {
             background-color: rgba(177, 173, 160, 0.87);
@@ -189,6 +190,7 @@ body {
         }
 
     }
+
 
     @keyframes drop{
         from {
@@ -320,8 +322,8 @@ footer {
 
 @media(max-width : 880px) {
 
-    #dropMennuComponent {
-        background-color: rgb(177, 173, 160, 1);
+    .dropdownMenu{
+        background-color: rgb(249, 250, 220);
     }
 }
 
