moviesApp en proceso

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@ body header {
   width: 100%;
   height: 70px;
   position: fixed;
+  z-index: 1;
 }
 body header .dropdownContainer {
   height: 4.5em;
@@ -84,11 +85,11 @@ body .dropdownMenu .cerrarContainer .cerrar {
 }
 @keyframes drop {
   from {
-    margin-left: 100%;
-    width: 300%;
+    margin-top: 100%;
+    width: 0%;
   }
   to {
-    margin-left: 0%;
+    margin-top: 0%;
     width: 100%;
   }
 }
@@ -118,7 +119,6 @@ body .presentacion {
   font-size: 3em;
   color: #1C1B18;
   padding-bottom: 0.2em;
-  z-index: 1;
 }
 .sobreMi > h1::after {
   content: "";
@@ -313,6 +313,39 @@ body .presentacion {
 .misProyectos > h1::after {
   width: 7.5em;
 }
+.misProyectos .moviesApp {
+  width: 35em;
+  height: 20em;
+  background-image: url(/images/Proyectos/MoviesApp.PNG);
+  background-size: cover;
+  text-decoration: none;
+  text-shadow: 1px 1px #ccc;
+  position: relative;
+}
+.misProyectos .moviesApp .fondoGris {
+  color: #F2F1F0;
+  background: rgba(219, 219, 219, 0.5);
+  z-index: 1;
+  width: 35em;
+  height: 20em;
+}
+.misProyectos .moviesApp .fondoGris .tecs {
+  display: flex;
+  justify-content: space-between;
+  width: 5em;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.misProyectos .moviesApp .fondoGris .tecs #tec {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.misProyectos .moviesApp .fondoGris .tecs #imgTec {
+  width: 1em;
+  height: 1em;
+}
 
 footer {
   background-color: #1C1B18;
@@ -342,7 +375,7 @@ footer .contacto span {
 
 @media (max-width: 880px) {
   .dropdownMenu {
-    background-color: #f9fadc;
+    background-color: rgba(247, 247, 238, 0.9);
   }
 }
 @media (max-width: 600px) {
