--- a/styles/style.scss
+++ b/styles/style.scss
@@ -106,6 +106,7 @@ body {
         width: 100%;
         height: 70px;
         position: fixed;
+        z-index: 1;
 
         & .dropdownContainer {
             height: 4.5em;
@@ -194,12 +195,12 @@ body {
 
     @keyframes drop{
         from {
-            margin-left: 100%;
-            width: 300%
+            margin-top: 100%;
+            width: 0%
           }
         
           to {
-            margin-left: 0%;
+            margin-top: 0%;
             width: 100%;
           }
     }
@@ -219,7 +220,7 @@ body {
 
     &>h1 {
         @include tituloBloque;
-        z-index: 1;
+        ;
 
 
         &::after {
@@ -284,6 +285,47 @@ body {
             width: 7.5em;
         }
     }
+    & .moviesApp{
+        width: 35em;
+        height: 20em;
+        background-image: url(/images/Proyectos/MoviesApp.PNG);
+        background-size: cover;
+        text-decoration: none;
+        text-shadow: 1px 1px #ccc;
+        position: relative;
+        
+        .fondoGris{
+            color:$fontColorPresentacion;
+            background: rgba(219, 219,219,0.5);
+            z-index: 1;
+            width: 35em;
+            height: 20em;
+            // visibility: hidden;
+        
+
+        & .tecs{
+            display: flex;
+            justify-content: space-between;
+            width: 5em;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+
+            #tec{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+
+            #imgTec{
+                width: 1em;
+                height: 1em;
+            }
+
+
+        }
+    }
+    }
 }
 
 footer {
@@ -323,7 +365,7 @@ footer {
 @media(max-width : 880px) {
 
     .dropdownMenu{
-        background-color: rgb(249, 250, 220);
+        background-color: rgba(247, 247, 238, 0.9);
     }
 }
 
