--- a/styles/style.css
+++ b/styles/style.css
@@ -288,6 +288,9 @@ body .presentacion {
   background-color: #F2F1F0;
   font-family: "Titillium Web", sans-serif;
   border-top: solid black 1px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .misProyectos h3 {
   font-family: "Titillium Web", sans-serif;
@@ -318,24 +321,37 @@ body .presentacion {
   height: 20em;
   background-image: url(/images/Proyectos/MoviesApp.PNG);
   background-size: cover;
-  text-decoration: none;
-  text-shadow: 1px 1px #ccc;
   position: relative;
+  box-shadow: 1px 1px 3px 3px #ccc;
+}
+.misProyectos .moviesApp:hover .fondoGris {
+  visibility: visible;
 }
 .misProyectos .moviesApp .fondoGris {
   color: #F2F1F0;
-  background: rgba(219, 219, 219, 0.5);
+  text-shadow: 1px 1px #ccc;
+  background: rgba(189, 188, 188, 0.7);
   z-index: 1;
   width: 35em;
   height: 20em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+}
+.misProyectos .moviesApp .fondoGris a {
+  color: #F2F1F0;
+  text-shadow: 1px 1px #ccc;
+  text-decoration: none;
+  font-size: 2em;
 }
 .misProyectos .moviesApp .fondoGris .tecs {
   display: flex;
   justify-content: space-between;
   width: 5em;
   position: absolute;
-  bottom: 0;
-  right: 0;
+  bottom: 1em;
+  right: 1em;
 }
 .misProyectos .moviesApp .fondoGris .tecs #tec {
   display: flex;
@@ -379,8 +395,17 @@ footer .contacto span {
   }
 }
 @media (max-width: 600px) {
+  section h1 {
+    font-size: 2em !important;
+  }
+
   .textoPresentacion {
     font-size: 0.75em;
+  }
+
+  .moviesApp {
+    height: 15em !important;
+    width: 25em !important;
   }
 }
 @media (max-width: 450px) {
