--- a/styles/style.scss
+++ b/styles/style.scss
@@ -276,6 +276,9 @@ body {
 .misProyectos {
     @include bloque;
     border-top: solid black 1px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     &>h1 {
         @include tituloBloque;
@@ -290,17 +293,38 @@ body {
         height: 20em;
         background-image: url(/images/Proyectos/MoviesApp.PNG);
         background-size: cover;
-        text-decoration: none;
-        text-shadow: 1px 1px #ccc;
         position: relative;
+        box-shadow: 1px 1px 3px 3px #ccc;
         
+        
+        &:hover{
+            .fondoGris{
+                visibility: visible;
+            }
+        }
         .fondoGris{
             color:$fontColorPresentacion;
-            background: rgba(219, 219,219,0.5);
+            text-shadow: 1px 1px #ccc;
+            background: rgba(189, 188, 188, 0.7);
             z-index: 1;
             width: 35em;
             height: 20em;
-            // visibility: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            visibility: hidden;
+
+            
+            & a{
+                color:$fontColorPresentacion;
+                text-shadow: 1px 1px #ccc;
+
+                text-decoration: none;
+                font-size: 2em;
+                
+                
+            }
+
         
 
         & .tecs{
@@ -308,8 +332,8 @@ body {
             justify-content: space-between;
             width: 5em;
             position: absolute;
-            bottom: 0;
-            right: 0;
+            bottom: 1em;
+            right: 1em;
 
             #tec{
                 display: flex;
@@ -371,8 +395,16 @@ footer {
 
 @media(max-width : 600px) {
 
+    section h1{
+        font-size: 2em !important;
+    }
+
     .textoPresentacion {
         font-size: 0.75em;
+    }
+    .moviesApp{
+        height: 15em !important;
+        width: 25em !important;
     }
 }
 
