cambio color closedm

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -406,6 +406,10 @@ footer {
         height: 15em !important;
         width: 25em !important;
     }
+    .fondoGris{
+        height: 15em !important;
+        width: 25em !important;
+    }
 }
 
 @media(max-width : 450px) {
