--- a/styles/style.css
+++ b/styles/style.css
@@ -407,6 +407,11 @@ footer .contacto span {
     height: 15em !important;
     width: 25em !important;
   }
+
+  .fondoGris {
+    height: 15em !important;
+    width: 25em !important;
+  }
 }
 @media (max-width: 450px) {
   .textoPresentacion {
