--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ body {
   position: relative;
 }
 body > div {
-  background-color: #1C1B18;
+  background-color: #1c1b18;
   color: #F2F1F0;
 }
 body header {
@@ -28,7 +28,7 @@ body header .dropdownContainer .dropdown {
   right: 1em;
   height: 3em;
   width: 3em;
-  padding: 0.7em;
+  padding: 0.5em;
 }
 body header .dropdownContainer .dropdown .bar {
   width: 3em;
@@ -42,19 +42,24 @@ body header .dropdownContainer .dropdown .black {
 body header .dropdownContainer .dropdown:hover {
   cursor: pointer;
   background-color: rgba(204, 204, 204, 0.5);
+  border-radius: 3px;
+  transition: 0.4s;
+  -webkit-transition: height 0.3s ease-in;
+  -moz-transition: height 0.3s ease-in;
+  -o-transition: height 0.3s ease-in;
+  -ms-transition: height 0.3s ease-in;
+  transition: height 0.3s ease-in;
 }
 body .dropdownMenu {
   visibility: hidden;
   position: absolute;
   right: 0;
-  top: 0;
+  top: 6em;
   display: inline-flex;
   flex-direction: column;
   align-items: flex-start;
   width: 15em;
   font-size: 0.8em;
-  animation-duration: 2s;
-  animation-name: drop;
 }
 body .dropdownMenu #dropMenuComponent {
   background-color: rgba(177, 173, 160, 0.87);
@@ -73,25 +78,20 @@ body .dropdownMenu a {
   font-size: 1.2em;
   color: #1C1B18;
 }
-body .dropdownMenu .cerrarContainer {
+body .dropdownMenu #dropMenuComponentClose {
+  background-color: rgba(177, 173, 160, 0.87);
   display: flex;
   justify-content: center;
   width: 100%;
   padding: 1em 0 0.5em 0;
 }
-body .dropdownMenu .cerrarContainer .cerrar {
+body .dropdownMenu #dropMenuComponentClose:hover {
+  background-color: rgba(144, 141, 131, 0.87);
+  cursor: pointer;
+}
+body .dropdownMenu #dropMenuComponentClose .cerrar {
   height: 15px;
   width: 20px;
-}
-@keyframes drop {
-  from {
-    margin-top: 100%;
-    width: 0%;
-  }
-  to {
-    margin-top: 0%;
-    width: 100%;
-  }
 }
 body .presentacion {
   display: flex;
@@ -99,6 +99,26 @@ body .presentacion {
   justify-content: center;
   align-items: center;
   font-size: 1.5em;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #1c1b18;
 }
 
 .sobreMi {
@@ -125,7 +145,7 @@ body .presentacion {
   position: absolute;
   bottom: 0;
   left: center;
-  background-color: #D3643B;
+  background-color: #d3643b;
   height: 3px;
 }
 .sobreMi > h1::after {
@@ -168,7 +188,7 @@ body .presentacion {
   position: absolute;
   bottom: 0;
   left: center;
-  background-color: #D3643B;
+  background-color: #d3643b;
   height: 3px;
 }
 .tecnologias > h1::after {
@@ -310,7 +330,7 @@ body .presentacion {
   position: absolute;
   bottom: 0;
   left: center;
-  background-color: #D3643B;
+  background-color: #d3643b;
   height: 3px;
 }
 .misProyectos > h1::after {
@@ -330,7 +350,7 @@ body .presentacion {
 .misProyectos .moviesApp .fondoGris {
   color: #F2F1F0;
   text-shadow: 1px 1px #ccc;
-  background: rgba(189, 188, 188, 0.7);
+  background: rgba(76, 76, 76, 0.7);
   z-index: 1;
   width: 35em;
   height: 20em;
@@ -345,6 +365,12 @@ body .presentacion {
   text-decoration: none;
   font-size: 2em;
 }
+.misProyectos .moviesApp .fondoGris a:hover {
+  padding: 0.2em;
+  border-radius: 4px;
+  background-color: rgba(23, 22, 25, 0.428);
+  transition: 1s;
+}
 .misProyectos .moviesApp .fondoGris .tecs {
   display: flex;
   justify-content: space-between;
@@ -352,6 +378,9 @@ body .presentacion {
   position: absolute;
   bottom: 1em;
   right: 1em;
+  padding: 0.2em;
+  border-radius: 4px;
+  background-color: rgba(64, 62, 62, 0.292);
 }
 .misProyectos .moviesApp .fondoGris .tecs #tec {
   display: flex;
@@ -364,7 +393,7 @@ body .presentacion {
 }
 
 footer {
-  background-color: #1C1B18;
+  background-color: #1c1b18;
   color: #F2F1F0;
   display: flex;
   flex-direction: column;
@@ -389,9 +418,9 @@ footer .contacto span {
   font-size: 1.2em;
 }
 
-@media (max-width: 880px) {
+@media (max-width: 600px) {
   .dropdownMenu {
-    background-color: rgba(247, 247, 238, 0.9);
+    background-color: #f7f7ee !important;
   }
 }
 @media (max-width: 600px) {
