--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,7 @@ body .dropdownMenu #dropMenuComponent {
 body .dropdownMenu #dropMenuComponent:hover {
   background-color: rgba(144, 141, 131, 0.87);
   cursor: pointer;
+  transition: 0.5s;
 }
 body .dropdownMenu a {
   padding: 0.5em 0 1.5em 1em;
@@ -418,7 +419,7 @@ footer .contacto span {
   font-size: 1.2em;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 800px) and (min-width: 600px) {
   .dropdownMenu {
     background-color: #f7f7ee !important;
   }
