--- a/styles/style.css
+++ b/styles/style.css
@@ -44,14 +44,8 @@ body header .dropdownContainer .dropdown:hover {
   background-color: rgba(204, 204, 204, 0.5);
   border-radius: 3px;
   transition: 0.4s;
-  -webkit-transition: height 0.3s ease-in;
-  -moz-transition: height 0.3s ease-in;
-  -o-transition: height 0.3s ease-in;
-  -ms-transition: height 0.3s ease-in;
-  transition: height 0.3s ease-in;
 }
 body .dropdownMenu {
-  visibility: hidden;
   position: absolute;
   right: 0;
   top: 6em;
@@ -65,11 +59,12 @@ body .dropdownMenu #dropMenuComponent {
   background-color: rgba(177, 173, 160, 0.87);
   border-bottom: 1px solid #1C1B18;
   width: 100%;
+  display: none;
 }
 body .dropdownMenu #dropMenuComponent:hover {
   background-color: rgba(144, 141, 131, 0.87);
   cursor: pointer;
-  transition: 0.5s;
+  transition: 1s;
 }
 body .dropdownMenu a {
   padding: 0.5em 0 1.5em 1em;
@@ -85,10 +80,12 @@ body .dropdownMenu #dropMenuComponentClose {
   justify-content: center;
   width: 100%;
   padding: 1em 0 0.5em 0;
+  display: none;
 }
 body .dropdownMenu #dropMenuComponentClose:hover {
   background-color: rgba(144, 141, 131, 0.87);
   cursor: pointer;
+  transition: 1s;
 }
 body .dropdownMenu #dropMenuComponentClose .cerrar {
   height: 15px;
@@ -370,7 +367,7 @@ body .presentacion {
   padding: 0.2em;
   border-radius: 4px;
   background-color: rgba(23, 22, 25, 0.428);
-  transition: 1s;
+  transition: 0.5s;
 }
 .misProyectos .moviesApp .fondoGris .tecs {
   display: flex;
