--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,9 @@ body header {
   z-index: 1;
 }
 body header .dropdownContainer {
+  position: absolute;
+  top: 1em;
+  right: 1em;
   height: 4.5em;
   width: 100%;
   display: flex;
