--- a/styles/style.css
+++ b/styles/style.css
@@ -77,20 +77,11 @@ body .dropdownMenu a {
   font-size: 1.2em;
   color: #1C1B18;
 }
-body .dropdownMenu #dropMenuComponentClose {
-  background-color: rgba(177, 173, 160, 0.87);
-  display: flex;
-  justify-content: center;
+body .dropdownMenu .dropMenuComponent7 {
   width: 100%;
-  padding: 1em 0 0.5em 0;
-  display: none;
+  padding: 1em 0 0.5em 5.5em;
 }
-body .dropdownMenu #dropMenuComponentClose:hover {
-  background-color: rgba(144, 141, 131, 0.87);
-  cursor: pointer;
-  transition: 1s;
-}
-body .dropdownMenu #dropMenuComponentClose .cerrar {
+body .dropdownMenu .dropMenuComponent7 .cerrar {
   height: 15px;
   width: 20px;
 }
