--- a/styles/style.scss
+++ b/styles/style.scss
@@ -152,7 +152,7 @@ body {
 
     .dropdownMenu {
         position: absolute;
-        right: 0;
+        right: 5em;
         top: 6em;
         display: inline-flex;
         flex-direction: column;
@@ -189,8 +189,8 @@ body {
         }
 
         .dropMenuComponent7 {
-            width: 100%;
-            padding: 1em 0 0.5em 5.5em;
+            width: 100% !important;
+            padding: 1em 0 0.5em 0em;
             
 
             & .cerrar {
@@ -419,10 +419,10 @@ footer {
 }
 
 
-@media(max-width : 800px) and (min-width: 600px) {
+@media(max-width : 800px)  {
 
-    .dropdownMenu {
-        background-color: rgb(247, 247, 238) !important;
+    .fondoGris {
+        visibility: visible !important;
     }
 }
 
