--- a/styles/style.css
+++ b/styles/style.css
@@ -77,13 +77,10 @@ body .dropdownMenu a {
   font-size: 1.2em;
   color: #1C1B18;
 }
-body .dropdownMenu .dropMenuComponent7 {
-  width: 100% !important;
-  padding: 1em 0 0.5em 0em;
-}
 body .dropdownMenu .dropMenuComponent7 .cerrar {
   height: 15px;
   width: 20px;
+  margin-left: 5em;
 }
 body .presentacion {
   display: flex;
@@ -437,6 +434,30 @@ footer .contacto span {
 @media (max-width: 450px) {
   .textoPresentacion {
     font-size: 0.6em;
+  }
+}
+@media (max-width: 400px) {
+  body {
+    width: 100vw !important;
+  }
+
+  .textoPresentacion {
+    font-size: 0.6em !important;
+  }
+
+  .moviesApp {
+    height: 10em !important;
+    width: 20em !important;
+  }
+
+  .fondoGris {
+    height: 10em !important;
+    width: 20em !important;
+  }
+
+  footer img {
+    width: 60px !important;
+    height: 60px !important;
   }
 }
 
