--- a/styles/style.scss
+++ b/styles/style.scss
@@ -110,7 +110,7 @@ body {
 
         & .dropdownContainer {
             position: absolute;
-            top:1em;
+            top: 1em;
             right: 1em;
             height: 4.5em;
             width: 100%;
@@ -189,13 +189,13 @@ body {
         }
 
         .dropMenuComponent7 {
-            width: 100% !important;
-            padding: 1em 0 0.5em 0em;
             
+
 
             & .cerrar {
                 height: 15px;
                 width: 20px;
+                margin-left: 5em;
             }
         }
 
@@ -419,7 +419,7 @@ footer {
 }
 
 
-@media(max-width : 800px)  {
+@media(max-width : 800px) {
 
     .fondoGris {
         visibility: visible !important;
@@ -450,5 +450,32 @@ footer {
 @media(max-width : 450px) {
     .textoPresentacion {
         font-size: 0.6em;
+    }
+}
+
+@media(max-width : 400px) {
+    body {
+        width: 100vw !important;
+    }
+
+
+    .textoPresentacion {
+        font-size: 0.6em !important;
+    }
+
+    .moviesApp {
+        height: 10em !important;
+        width: 20em !important;
+    }
+
+    .fondoGris {
+        height: 10em !important;
+        width: 20em !important;
+    }
+
+    footer img {
+        width: 60px !important;
+        height: 60px !important;
+
     }
 }
