--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,7 @@
 $backgroundColorPresentacion: rgb(28, 27, 24);
-$fontColorPresentacion: #F2F1F0;
+$fontColorPresentacion: rgb(242, 241, 240);
 $backgroundColor: #F2F1F0;
-$fontColor:#1C1B18;
+$fontColor:rgb(28, 27, 24);
 $subrayado: rgb(211, 100, 59);
 $font : 'Titillium Web',
 sans-serif;
@@ -162,10 +162,11 @@ body {
 
 
         & #dropMenuComponent {
-            background-color: rgba(177, 173, 160, 0.87);
+            background-color: rgba(184, 182, 181, 0.5);
             border-bottom: 1px solid $fontColor;
             width: 100%;
             display: none;
+            color: $fontColor;
 
             &:hover {
                 background-color: rgba(144, 141, 131, 0.87);
@@ -248,18 +249,32 @@ body {
         }
     }
 
-    & .cuadroTexto {
-        margin: 5em 0em;
-        padding: 1em;
-        box-shadow: 1px 1px 3px 3px #ccc;
-        text-align: justify;
+    .textoEimagen{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
 
-        &>p {
-            color: $fontColor;
-            font-size: 1.5em;
+        & img{
+            margin-top: 2em;
+            height: 10em;
+            width: 15em;
+        }
+
+        & .cuadroTexto {
+            margin: 2em 0em;
+            padding: 1em;
+            box-shadow: 1px 1px 3px 3px #ccc;
+            text-align: justify;
+    
+            &>p {
+                color: $fontColor;
+                font-size: 1.5em;
+            }
         }
     }
-}
+    }
+
 
 .tecnologias {
     @include bloque;
