--- a/styles/style.css
+++ b/styles/style.css
@@ -50,7 +50,7 @@ body header .dropdownContainer .dropdown:hover {
 }
 body .dropdownMenu {
   position: absolute;
-  right: 5em;
+  right: 7vw;
   top: 6em;
   display: inline-flex;
   flex-direction: column;
