--- a/styles/style.scss
+++ b/styles/style.scss
@@ -152,7 +152,7 @@ body {
 
     .dropdownMenu {
         position: absolute;
-        right: 5em;
+        right: 7vw;
         top: 6em;
         display: inline-flex;
         flex-direction: column;
